# red-neuronal

./: CMakeLists.txt  README.md
docs/resultados_experimentales/: resultados_barrido_quiebre_N2-12.csv  resultados_extremo_N34.csv  resultados_grande_N20.csv  resultados_mediano_N10.csv  resultados_pequeno_N2.csv  resultados_pequeno_N3.csv  resultados_pequeno_N4.csv
include/: app_gui.hpp  benchmark.hpp  dataset.hpp  neural_network.hpp  perceptron.hpp
src/: benchmark_main.cpp  main.cpp
src/comparison/: benchmark.cpp
src/core/: neural_network.cpp  perceptron.cpp
src/data/: dataset.cpp
src/gui/: app_gui.cpp
